<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="callback"
            type="com.example.medicationassistance.ui.AddMedicineActivity.Callback" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddMedicineActivity">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txt_medi_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/medi_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_medi_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:hint="@string/medi_des"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_medi_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/edittext_medi_freq"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext_medi_freq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:digits="0123456789"
            android:ems="10"
            android:inputType="numberDecimal"
            android:hint="@string/hint_medi_freq"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_medi_des"
            app:layout_constraintEnd_toStartOf="@+id/switch_meal"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:checked="false"
            app:layout_constraintHorizontal_bias="1"
            android:text="@string/switch_meal"
            app:layout_constraintStart_toEndOf="@id/edittext_medi_freq"
            app:layout_constraintTop_toBottomOf="@+id/edittext_medi_des"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Save"
            android:onClick="@{()->callback.add()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_medi_freq"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

